--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </nav>
             </div>
             <div class="logo-wrapper">
-                <img class="img-logo" src="img/logo.png">
+                <img class="img-logo" src="logo.png">
                 <h1 class="header-title">Kartki i upominki na każdą okazje</h1>
             </div>
         </header>
